# postgresql-transactional

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  postgresql-transactional.cabal
.github/workflows/: ci.yaml
src/Database/PostgreSQL/: Tagged.hs  Transaction.hs  TransactionalStore.hs
tests/: Spec.hs
tests/Database/PostgreSQL/: TransactionSpec.hs
