name:                postgresql-transactional
version:             1.2.1
synopsis:            a transactional monad on top of postgresql-simple
license:             MIT
license-file:        LICENSE.txt
author:              Reid Draper and Patrick Thomson
maintainer:          patrick@helium.com
copyright:           2015 Helium
category:            Database
build-type:          Simple
cabal-version:       >=1.10
description:
  This package is a simple monadic wrapper around the SQL primitives
  provided by the postgresql-simple package. It provides simple and
  predictable semantics for database options, enforces awareness of
  Postgres's transactional nature at API boundaries, and obviates
  the need for SQL boilerplate in transactional queries.

source-repository head
    type: git
    location: https://github.com/helium/postgresql-transactional.git

library
  exposed-modules:     Database.PostgreSQL.Transaction
                     , Database.PostgreSQL.Tagged
  hs-source-dirs: src
  ghc-options: -Wall
  -- other-extensions:
  build-depends: base >= 4 && < 5
               , exceptions
               , monad-control
               , mtl
               , postgresql-simple >= 0.4
  -- hs-source-dirs:
  default-language:    Haskell2010
